Correction Scrollbar

--- a/index.css
+++ b/index.css
@@ -1,7 +1,9 @@
-* { 
-    margin: 0; 
+* {
+    margin: 0;
     padding: 0;
 }
 
-body, html { height:100%; }
-
+body, html {
+  height:100%;
+  overflow:hidden;
+}
